Button clicks update display

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         <div class="buttons">
             <button id="clear">C</button>
-            <button id="delete">Del</button>
-            <button id="negate">+/-</button>
+            <button id="delete">⌫</button>
+            <button id="negate">±</button>
             <button id="divide">/</button>
     
             <button class="number">7</button>
