--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
     <div class="calculator">
+
+        <div id="operation-display"></div> 
         <input type="text" id="display" disabled>
 
         <div class="buttons">
